tests/baselines/reference/tsxUnionElementType3.errors.txt
file.tsx(34,17): error TS2322: Type 'string' is not assignable to type 'number'.
file.tsx(37,10): error TS2741: Property 'x' is missing in type '{}' but required in type '{ x: number; }'.
file.tsx(38,10): error TS2741: Property 'x' is missing in type '{ "data-extra": string; }' but required in type '{ x: number; }'.


==== file.tsx (3 errors) ====
    /// <reference path="/.lib/react.d.ts" />
    
    import React = require('react');
    
    class RC1 extends React.Component<{x : number}, {}> {
        render() {
            return null;
        }
    }
    
    class RC2 extends React.Component<{ x: string }, {}> {
        render() {
            return null;
        }
        private method() { }
    }
    
    class RC3 extends React.Component<{}, {}> {
        render() {
            return null;
        }
    }
    
    class RC4 extends React.Component<{}, {}> {
        render() {
            return null;
        }
    }
    
    var EmptyRCComp = RC3 || RC4;
    var PartRCComp = RC1 || RC4;
    var RCComp = RC1 || RC2;
    // OK
    let a = <RCComp x="Hi" />;
                    ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
!!! related TS6500 file.tsx:5:36: The expected type comes from property 'x' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<RC1> & { x: number; } & { children?: ReactNode | undefined; }'
    let a1 = <EmptyRCComp />;
    let a2 = <EmptyRCComp data-prop="hello" />;
    let b = <PartRCComp />
             ~~~~~~~~~~
!!! error TS2741: Property 'x' is missing in type '{}' but required in type '{ x: number; }'.
!!! related TS2728 file.tsx:5:36: 'x' is declared here.
    let c = <PartRCComp data-extra="hello" />
             ~~~~~~~~~~
!!! error TS2741: Property 'x' is missing in type '{ "data-extra": string; }' but required in type '{ x: number; }'.
!!! related TS2728 file.tsx:5:36: 'x' is declared here.